# django-simple-analytics

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENCE  README.md  dev-requirements.txt  manage.py  pyproject.toml  release-requirements.txt  requirements.txt
.github/workflows/: mypy.yml  release.yml  testing.yml
scripts/: deploy.sh  release.sh
simple_analytics/: admin.py  apps.py  middleware.py  models.py
simple_analytics/migrations/: 0001_initial.py  0002_visitperpage_origin.py  0003_visitperpage_user_agent.py  0004_alter_visitperpage_page.py
tests/: conftest.py  settings.py  test_admin.py  test_analytics.py  test_middleware.py  test_missing_migrations.py  test_model.py  urls.py
