[project]
name = "django-simple-analytics"
version = "0.4.0"
description = "A simple django packages to track requests on the site"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    {name = "Ferran Jovell", email = "ferran.jovell+gh@gmail.com"}
]
keywords = ["django", "analytics"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django"
]
 dependencies = [
    "Django>=3.2.14"
 ]

[project.urls]
homepage = "https://github.com/mrswats/django-simple-analytics"
"Bug Tracker" = "https://github.com/mrswats/django-simple-analytics/issues"

[project.optional-dependencies]
test = [
    "pre-commit==2.20.0",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "pytest-django==4.5.2",
    "pytest-sugar==0.9.5",
    "time-machine==2.8.1",
    "mypy==0.961",
    "django-stubs[compatible-mypy]==1.12.0",
    "typing-extensions==4.3.0",
]

[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
line-length = 99
target_version = ["py37"]
skip-string-normalization = false
include = "\\.pyi?$"
exclude = """
(
  /(
      \\.eggs         # exclude a few common directories in the
    | \\.git          # root of the project
    | \\.hg
    | \\.mypy_cache
    | \\.tox
    | \\.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
"""

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
files = "simple_analytics"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
   "manage.py",
   "migrations" ,
   "tests/",
]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "manage.py",
    "**/tests/*",
    "**/migrations/*.py",
]

[tool.coverage.report]
skip_empty = true
fail_under = 90

[tool.coverage.html]
directory = "artifacts/htmlcov/"
