[project]
name = "django-simple-analytics"
version = "1.3.0"
description = "A simple django packages to track requests on the site"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ferran Jovell", email = "ferran.jovell+gh@gmail.com" },
]
keywords = [
    "django",
    "analytics",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django",
]
dependencies = [
    "Django>=4.1.0",
]

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://github.com/mrswats/django-simple-analytics"
"Bug Tracker" = "https://github.com/mrswats/django-simple-analytics/issues"

[project.optional-dependencies]
test = [
    "django-stubs[compatible-mypy]",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "time-machine",
    "typing-extensions",
]

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
line-length = 99
target_version = [
    "py39",
]
skip-string-normalization = false
include = "\\.pyi?$"
exclude = "(\n  /(\n      \\.eggs         # exclude a few common directories in the\n    | \\.git          # root of the project\n    | \\.hg\n    | \\.mypy_cache\n    | \\.tox\n    | \\.venv\n    | _build\n    | buck-out\n    | build\n    | dist\n  )/\n)\n"

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
]
files = "simple_analytics"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
    "manage.py",
    "migrations",
    "tests/",
]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.run]
source = [
    ".",
]
branch = true
omit = [
    "manage.py",
    "**/tests/*",
    "**/migrations/*.py",
]

[tool.coverage.report]
skip_empty = true
fail_under = 90

[tool.coverage.html]
directory = "artifacts/htmlcov/"
